# CP1-VisaoComputacional

./: README.md  pyproject.toml
src/: main.py
