[project]
name = "cp1"
version = "0.1.0"
description = ""
authors = [
    {name = "JuanPinheiroFIAP",email = "rm552202@fiap.com.br"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-python (>=4.13.0.92,<5.0.0.0)",
    "matplotlib (>=3.10.8,<4.0.0)"
]

[tool.poetry]
packages = [{include = "cp1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
